@@ -1,4 +1,4 @@
-/* $Id: acl.c,v 1.90 2009/04/16 12:33:19 manu Exp $ */
+/* $Id: acl.c,v 1.91 2009/06/08 23:40:06 manu Exp $ */
 
 /*
  * Copyright (c) 2004-2007 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: acl.c,v 1.90 2009/04/16 12:33:19 manu Exp $");
+__RCSID("$Id: acl.c,v 1.91 2009/06/08 23:40:06 manu Exp $");
 #endif
 #endif
 
@@ -2522,7 +2522,7 @@ acl_add_report(report)
 }
 
 void 
-acl_add_addheader(hdr)
+ acl_add_addheader(hdr)
 	char *hdr;
 {
 	if (gacl->a_addheader) {
@@ -2541,4 +2541,107 @@ acl_add_addheader(hdr)
 		mg_log(LOG_DEBUG, "load acl addheader \"%s\"", hdr);
 
 	return;
+}
+
+int
+ acl_modify_by_prop(key, value, ap)
+	char *key;
+	char *value;
+	struct acl_param *ap;
+{
+	if (conf.c_acldebug)
+		mg_log(LOG_DEBUG, "check got \"%s\" => \"%s\"",
+		    key, value);
+	if (strcasecmp(key, "milterGreylistStatus") == 0) {
+		if ((strcasecmp(value, "Ok") == 0) ||
+		    (strcasecmp(value, "TRUE") == 0))
+		goto out;
+	}
+
+	if (strcasecmp(key, "milterGreylistAction") == 0) {
+		if (strcasecmp(value, "greylist") == 0)
+			ap->ap_type = A_GREYLIST;
+		else if (strcasecmp(value, "blacklist") == 0)
+			ap->ap_type = A_BLACKLIST;
+		else if (strcasecmp(value, "whitelist") == 0)
+			ap->ap_type = A_WHITELIST;
+		else
+			mg_log(LOG_WARNING, "ignored greylist-type \"%s\"",
+			    value);
+		goto out;
+	}
+
+	if (strcasecmp(key, "milterGreylistDelay") == 0) {
+		ap->ap_delay = humanized_atoi(value);
+		goto out;
+	}
+
+	if (strcasecmp(key, "milterGreylistAutowhite") == 0) {
+		ap->ap_autowhite = humanized_atoi(value);
+		goto out;
+	}
+
+	if (strcasecmp(key, "milterGreylistFlushAddr") == 0) {
+		ap->ap_flags |= A_FLUSHADDR;
+		goto out;
+	}
+
+	if (strcasecmp(key, "milterGreylistNoLog") == 0) {
+		ap->ap_flags |= A_NOLOG;
+		goto out;
+	}
+
+	if (strcasecmp(key, "milterGreylistCode") == 0) {
+		if ((ap->ap_code = strdup(value)) == NULL) {
+			mg_log(LOG_ERR, "strdup(\"%s\") failed: %s",
+			    key, strerror(errno));
+			exit(EX_OSERR);
+		}
+		ap->ap_flags |= A_FREE_CODE;
+		goto out;
+	}
+
+	if (strcasecmp(key, "milterGreylistEcode") == 0) {
+		if ((ap->ap_ecode = strdup(value)) == NULL) {
+			mg_log(LOG_ERR, "strdup(\"%s\") failed: %s",
+			    key, strerror(errno));
+			exit(EX_OSERR);
+		}
+		ap->ap_flags |= A_FREE_ECODE;
+		goto out;
+	}
+
+	if (strcasecmp(key, "milterGreylistMsg") == 0) {
+		if ((ap->ap_msg = strdup(value)) == NULL) {
+			mg_log(LOG_ERR, "strdup(\"%s\") failed: %s",
+			    key, strerror(errno));
+			exit(EX_OSERR);
+		}
+		ap->ap_flags |= A_FREE_MSG;
+		goto out;
+	}
+
+	if (strcasecmp(key, "milterGreylistReport") == 0) {
+		if ((ap->ap_report = strdup(value)) == NULL) {
+			mg_log(LOG_ERR, "strdup(\"%s\") failed: %s",
+			    key, strerror(errno));
+			exit(EX_OSERR);
+		}
+		ap->ap_flags |= A_FREE_REPORT;
+		goto out;
+	}
+
+	if (strcasecmp(key, "milterGreylistIgnore") == 0)
+		goto out;
+	if (conf.c_acldebug)
+		mg_log(LOG_DEBUG, "acl_modify inexpected property "
+		       "\"%s\"=\"%s\"", key, value);
+
+	return -1;
+out:
+	if (conf.c_acldebug)
+		mg_log(LOG_DEBUG, "modified acl property "
+		       "\"%s\"=\"%s\"", key, value);
+
+	return 0;
 }
